abel to fetch  all data from API and fixed it as requirement on UI

--- a/index.html
+++ b/index.html
@@ -1,73 +1,56 @@
+
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="header">
-      <h1>Stock Tracker Dashboard</h1>
-    </div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Stock Tracker Dashboard</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Stock Tracker Dashboard</h1>
+    </header>
+    <main>
+        <h2>Select Trending Stock</h2>
+        <section class="dropdown-section">
+            <select id="stockDropdown"></select>
+            <button id="loadStockButton">Load Stock</button>
+        </section>
 
-   <main>
-    <h3>Select Trending Stock</h3>
+        <section class="search-section">
+            <input type="text" id="stockSearch" placeholder="Search for a stock (e.g., AAPL)">
+            <button id="searchButton">Search</button>
+        </section>
 
-    <div class="option-container">
-      <select name="load-stock" id="load-stock">
-        <option value="AAPL">AAPL</option>
-        <option value="GOOGL">GOOGL</option>
-        <option value="MSFT">MSFT</option>
-        <option value="AMZN">AMZN</option>
-        <option value="TSLA">TSLA</option>
-        <option value="FB">FB</option>
-        <option value="NFLX">NFLX</option>
-        <option value="NVDA">NVDA</option>
-        <option value="BABA">BABA</option>
-        <option value="INTC">INTC</option>
-      </select>
+        <section class="stock-info">
+            <h2>Stock Information</h2>
+            <div id="stockDetails"></div>
+        </section>
 
-      <button id="load-stock-btn">Load Stock</button>
-    </div>
+        <section class="graph-section">
+            <h2>Stock Price Graph</h2>
+            <canvas id="stockChart"></canvas>
+        </section>
 
-    <div class="search-container">
-      <input
-        type="text"
-        placeholder="Search for a stock(e.g.,AA)"
-        id="search-stock"
-      />
-      <button id="search-btn">Search</button>
-    </div>
+        <section class="stock-table">
+            <h2>Compare Stocks</h2>
+            <table id="stockTable" border="1">
+                <thead>
+                    <tr>
+                        <th>Stock</th>
+                        <th>Price</th>
+                        <th>Change</th>
+                        <th>Volume</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </section>
+    </main>
+  
 
-    <section id="stock-information">
-      <h2>Stock Information</h2>
-      <div id="stock-info"></div>
-    </section>
-
-    <h2>Stock Price Graph</h2>
-    <canvas id="stock-graph"></canvas>
-
-<!-- Table stock -->
-    <section id="stocktable">
-      <h2>Compare Stocks</h2>
-      <table id="stock-Table" border="1">
-        <thead>
-          <tr>
-            <th>Stock</th>
-            <th>Price</th>
-            <th>Change</th>
-            <th>Volume</th>
-          </tr>
-        </thead>
-
-        <tbody>
-        </tbody>
-
-      </table>
-    </section>
-   </main>
-   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="scripts.js"></script>
-  </body>
+</body>
 </html>
